# Rust-Todo-App

./: Cargo.toml  README.MD  thunder-collection_api.json
.github/workflows/: rust.yml
artifact/coverage/: report.txt
src/: main.rs
src/todo/: mod.rs  todo_model.rs  todo_model_test.rs  todo_repository.rs  todo_repository_test.rs
src/todo/tests/: mod.rs  test_repository.rs
src/utils/: mod.rs  request_model.rs  uuid_params.rs  uuid_params_test.rs
